--- a/app/src/main/res/layout/activity_camera_preview.xml
+++ b/app/src/main/res/layout/activity_camera_preview.xml
@@ -4,12 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <Button
-        android:id="@+id/btn_camera_preview"
+    tools:context=".CameraPreviewActivity">
+    <com.example.zw.liveapp.camera.CameraView
+        android:id="@+id/cameraView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="摄像头预览"/>
-
+        android:layout_height="match_parent" />
 </android.support.constraint.ConstraintLayout>
