--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,17 +10,26 @@
         android:id="@+id/btn_camera_preview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="摄像头预览"/>
+        android:text="摄像头预览" />
+
     <Button
         android:id="@+id/btn_video"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/btn_camera_preview"
-        android:text="视频录制"/>
+        android:text="视频录制"
+        app:layout_constraintTop_toBottomOf="@+id/btn_camera_preview" />
+
     <Button
         android:id="@+id/btn_imgMixture"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/btn_video"
-        android:text="图片合成"/>
+        android:text="图片合成"
+        app:layout_constraintTop_toBottomOf="@+id/btn_video" />
+
+    <Button
+        android:id="@+id/btn_yuvVideo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="播放yuv视频"
+        app:layout_constraintTop_toBottomOf="@+id/btn_imgMixture" />
 </android.support.constraint.ConstraintLayout>
