--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,4 +32,11 @@
         android:layout_height="wrap_content"
         android:text="播放yuv视频"
         app:layout_constraintTop_toBottomOf="@+id/btn_imgMixture" />
+
+    <Button
+        android:id="@+id/btn_livePush"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="视频推流"
+        app:layout_constraintTop_toBottomOf="@+id/btn_yuvVideo" />
 </android.support.constraint.ConstraintLayout>
