通过MediaCodec获取SPS和PPS

--- a/app/src/main/res/layout/activity_live_push.xml
+++ b/app/src/main/res/layout/activity_live_push.xml
@@ -5,10 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LivePushActivity">
-
+    <com.example.zw.liveapp.camera.CameraView
+        android:id="@+id/cameraView_push"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btn_startPush"/>
     <Button
         android:id="@+id/btn_startPush"
         android:text="开始推流"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/cameraView_push"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
